[package]
name = "juste_skia"
version = "0.0.1"
edition = "2024"

[dependencies]
gl = "0.14.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
skia-safe = { version = "0.87.0", features = ["gl"] }
winit = "0.30.11"
juste = { path = "D:/project/rust/juste" }
reqwest = { version = "0.12.22", features = ["blocking"] }
libloading = "0.8.8"
